# openvm

./: .codespellignore  .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  VERSIONING.md  config-1b.toml  config.toml  rustfmt.toml
axiom-vm/: Cargo.toml
axiom-vm/src/: commit.rs  config.rs  lib.rs
axiom-vm/src/verifier/: mod.rs  utils.rs
axiom-vm/tests/: integration_test.rs
benchmark/: Cargo.toml  README.md
benchmark/benches/: README.md  single_rw.rs  single_rw_trace_gen.rs  xor_bits.rs
benchmark/config/large/: BabyBearBlake3_32x1024x1048576-1048576-16_3-65-0.toml  BabyBearBlake3_32x1024x1048576-1048576-16_3-80-0.toml  BabyBearBlake3_32x1024x1048576-1048576-16_4-45-0.toml  BabyBearBlake3_32x1024x1048576-1048576-16_4-57-0.toml  BabyBearKeccak_32x1024x1048576-1048576-16_3-65-0.toml  BabyBearKeccak_32x1024x1048576-1048576-16_3-80-0.toml  BabyBearKeccak_32x1024x1048576-1048576-16_4-45-0.toml  BabyBearKeccak_32x1024x1048576-1048576-16_4-57-0.toml  BabyBearPoseidon2_32x1024x1048576-1048576-16_3-65-0.toml  BabyBearPoseidon2_32x1024x1048576-1048576-16_3-80-0.toml  BabyBearPoseidon2_32x1024x1048576-1048576-16_4-45-0.toml  BabyBearPoseidon2_32x1024x1048576-1048576-16_4-57-0.toml
benchmark/config/mini/: BabyBearBlake3_32x256x16-16-16_2-103-0.toml  BabyBearBlake3_32x256x16-16-16_3-65-0.toml  BabyBearBlake3_32x256x16-16-16_3-80-0.toml  BabyBearBlake3_32x256x16-16-16_4-45-0.toml  BabyBearBlake3_32x256x16-16-16_4-57-0.toml  BabyBearBlake3_32x256x64-64-16_2-103-0.toml  BabyBearBlake3_32x256x64-64-16_3-65-0.toml  BabyBearBlake3_32x256x64-64-16_3-80-0.toml  BabyBearBlake3_32x256x64-64-16_4-45-0.toml  BabyBearBlake3_32x256x64-64-16_4-57-0.toml  BabyBearBlake3_32x32x16-16-16_2-103-0.toml  BabyBearBlake3_32x32x16-16-16_3-65-0.toml  BabyBearBlake3_32x32x16-16-16_3-80-0.toml  BabyBearBlake3_32x32x16-16-16_4-45-0.toml  BabyBearBlake3_32x32x16-16-16_4-57-0.toml  BabyBearBlake3_32x32x64-64-16_2-103-0.toml  BabyBearBlake3_32x32x64-64-16_3-65-0.toml  BabyBearBlake3_32x32x64-64-16_3-80-0.toml  BabyBearBlake3_32x32x64-64-16_4-45-0.toml  BabyBearBlake3_32x32x64-64-16_4-57-0.toml  BabyBearKeccak_32x256x16-16-16_2-103-0.toml  BabyBearKeccak_32x256x16-16-16_3-65-0.toml  BabyBearKeccak_32x256x16-16-16_3-80-0.toml  BabyBearKeccak_32x256x16-16-16_4-45-0.toml  BabyBearKeccak_32x256x16-16-16_4-57-0.toml  BabyBearKeccak_32x256x64-64-16_2-103-0.toml  BabyBearKeccak_32x256x64-64-16_3-65-0.toml  BabyBearKeccak_32x256x64-64-16_3-80-0.toml  BabyBearKeccak_32x256x64-64-16_4-45-0.toml  BabyBearKeccak_32x256x64-64-16_4-57-0.toml  BabyBearKeccak_32x32x16-16-16_2-103-0.toml  BabyBearKeccak_32x32x16-16-16_3-65-0.toml  BabyBearKeccak_32x32x16-16-16_3-80-0.toml  BabyBearKeccak_32x32x16-16-16_4-45-0.toml  BabyBearKeccak_32x32x16-16-16_4-57-0.toml  BabyBearKeccak_32x32x64-64-16_2-103-0.toml  BabyBearKeccak_32x32x64-64-16_3-65-0.toml  BabyBearKeccak_32x32x64-64-16_3-80-0.toml  BabyBearKeccak_32x32x64-64-16_4-45-0.toml  BabyBearKeccak_32x32x64-64-16_4-57-0.toml  (+20 more)
benchmark/github/: README.md
benchmark/output/: 20240708-193505.csv  20240709-004541-mini.csv  20240709-060944-r6g.8xl.csv  20240709-212442-r6g.8xl.csv  20240710-151706-r6g.8xl.csv  Predicate-20240719-143152.csv  ReadWrite-20240719-105943.csv
benchmark/src/: lib.rs  main.rs
benchmark/src/cli/: mod.rs
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: fibonacci_execute.rs  regex_execute.rs
benchmarks/examples/: regex-elf  regex_execute.rs
benchmarks/execute/: Cargo.toml
benchmarks/guest/: README.md
benchmarks/prove/: Cargo.toml
benchmarks/src/: utils.rs
benchmarks/utils/: Cargo.toml
cargo-axiom/: Cargo.toml  README.md
cargo-axiom/src/: lib.rs  util.rs
chips/: Cargo.toml
chips/src/: lib.rs  sub_chip.rs  utils.rs
chips/tests/: integration_test.rs  merkle_proof.rs
circuits/derive/: Cargo.toml
circuits/ecc/: Cargo.toml
circuits/primitives/: Cargo.toml
compiler/: Cargo.toml  README.md
compiler/examples/: fibonacci.rs
compiler/src/: lib.rs  util.rs
compiler/tests/: arithmetic.rs  array.rs  conditionals.rs  cycle_tracker.rs  ec_add.rs  ext.rs  for_loops.rs  hint.rs  io.rs  keccak256.rs  loops.rs  lt.rs  modular_arithmetic.rs  poseidon2.rs  ptr_struct.rs  public_values.rs  uint.rs
crates/axvm-sdk/: Cargo.toml
crates/cargo-axiom/: Cargo.toml
crates/cli/: Cargo.toml  README.md  build.rs
crates/continuations/: Cargo.toml
crates/prof/: Cargo.toml
crates/sdk/: Cargo.toml
ecc/: Cargo.toml
ecc/execution/: Cargo.toml
ecc/lib/: Cargo.toml
ecc/primitives/: Cargo.toml
ecc/src/: ec_mul.rs  lib.rs
logical-interface/: Cargo.toml  README.md
logical-interface/src/: lib.rs  types.rs  utils.rs
logical-interface/tests/: afs_interface.rs
poseidon2-air/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs  utils.rs
recursion/: Cargo.toml  trusted_setup_s3.sh
recursion/benches/: tiny_e2e.rs
recursion/src/: challenger.rs  commit.rs  digest.rs  folder.rs  halo2.rs  helper.rs  hints.rs  lib.rs  outer_poseidon2.rs  stark.rs  testing_utils.rs  tests.rs  types.rs  utils.rs  vars.rs  view.rs  witness.rs
recursion/tests/: cached_trace.rs  common.rs  interactions.rs  recursion.rs  single_air.rs
sdk/: Cargo.toml
sdk/scripts/: bench.py
sdk/src/: engine.rs  lib.rs  utils.rs
stark-backend/: Cargo.toml
stark-backend/src/: chip.rs  circuit_api.rs  commit.rs  config.rs  engine.rs  lib.rs  rap.rs  utils.rs
stark-backend/tests/: integration_test.rs
stark-middleware/: Cargo.toml
stark-middleware/derive/: Cargo.toml
stark-middleware/src/: INTERACTION.md  air_builders.rs  chip.rs  config.rs  interaction.rs  lib.rs  util.rs  utils.rs  verify.rs
stark-middleware/tests/: fib_triples_integration_test.rs  integration_test.rs  utils.rs
stark-sdk/: Cargo.toml
stark-sdk/scripts/: bench.py
stark-sdk/src/: cost_estimate.rs  engine.rs  lib.rs
test-utils/: Cargo.toml
test-utils/src/: engine.rs  lib.rs  utils.rs
vm/: Cargo.toml  README.md
vm/derive/: Cargo.toml
vm/src/: lib.rs
vm/tests/: integration_test.rs
(+3330 files in other folders)
