[workspace]
members = [
    "stark-backend",
    "stark-sdk",
    "circuits/ecc",
    "circuits/hashes/poseidon2-air",
    "circuits/primitives",
    "circuits/derive",
    "vm",
    "toolchain/instructions",
    "toolchain/instructions/derive",
    "toolchain/native-compiler",
    "toolchain/native-compiler/derive",
    "toolchain/riscv/transpiler",
    "toolchain/riscv/platform",
    "toolchain/riscv/axvm",
    "toolchain/build",
    "lib/ecc",
    "lib/ecc-constants",
    "lib/ecc-execution",
    "lib/recursion",
    "axiom-vm",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Intrinsic Technologies"]
edition = "2021"
homepage = "https://axiom.xyz"
repository = "https://github.com/axiom-crypto/"
license = "MIT"

# Fastest runtime configuration
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

# Make sure debug symbols are in the bench profile for flamegraphs
[profile.bench]
inherits = "profiling"

# This will compile slowly
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

# For O1 optimization but still fast(ish) compile times
[profile.fast]
inherits = "dev"
debug-assertions = true
# better recompile times
incremental = true
lto = "thin"

[workspace.dependencies]
# Axiom
axvm = { path = "toolchain/riscv/axvm", default-features = false }
axvm-instructions = { path = "toolchain/instructions", default-features = false }
axvm-instructions-derive = { path = "toolchain/instructions/derive", default-features = false }
axvm-platform = { path = "toolchain/riscv/platform", default-features = false }
axvm-transpiler = { path = "toolchain/riscv/transpiler", default-features = false }
axvm-build = { path = "toolchain/build", default-features = false }
axvm-ecc = { path = "lib/ecc", default-features = false }
axvm-ecc-constants = { path = "lib/ecc-constants", default-features = false }
axvm-recursion = { path = "lib/recursion", default-features = false }
axvm-native-compiler = { path = "toolchain/native-compiler", default-features = false }
axvm-native-compiler-derive = { path = "toolchain/native-compiler/derive", default-features = false }
axvm-circuit = { path = "vm", default-features = false }
axvm-circuit-derive = { path = "vm/derive", default-features = false }
ax-poseidon2-air = { path = "circuits/hashes/poseidon2-air", default-features = false }
ax-ecc-primitives = { path = "circuits/ecc", default-features = false }
ax-ecc-execution = { path = "lib/ecc-execution", default-features = false }
ax-circuit-primitives = { path = "circuits/primitives", default-features = false }
ax-circuit-derive = { path = "circuits/derive", default-features = false }
ax-stark-backend = { path = "stark-backend", default-features = false }
ax-stark-sdk = { path = "stark-sdk", default-features = false }
# Plonky3
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
    "nightly-features",
], rev = "95e56fa" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" } # the "parallel" feature is NOT on by default to allow single-threaded benchmarking
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3.git", rev = "95e56fa" }
halo2curves-axiom = { git = "https://github.com/axiom-crypto/halo2curves.git", branch = "test/visibility" }

snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier", branch = "chore/ruint-pin", default-features = false, features = [
    "loader_halo2",
    "halo2-axiom",
    "display",
] }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", rev = "bb476b9" }

itertools = "0.13.0"
rayon = "1.10"
parking_lot = "0.12.2"
tracing = "0.1.40"
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
bincode = "1.3.3"
lazy_static = "1.5.0"
once_cell = "1.19.0"
derive-new = "0.6.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
enum-utils = "0.1.1"
backtrace = "0.3.71"
rand = "0.8.5"
hex-literal = "0.4.1"
metrics = "0.23.0"
cfg-if = "1.0.0"
inferno = "0.11.21"
test-case = "3.3.1"
test-log = "0.2.16"
enum_dispatch = "0.3.13"
eyre = "0.6.12"
# cryptography
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = "0.13.3"
elliptic-curve = "0.13.8"
num-bigint-dig = "0.8.4"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
tempfile = "3.13.0"

# For local development. Add to your `.cargo/config.toml`
# [patch."https://github.com/Plonky3/Plonky3.git"]
# p3-air = { path = "../Plonky3/air" }
# p3-field = { path = "../Plonky3/field" }
# p3-commit = { path = "../Plonky3/commit" }
# p3-matrix = { path = "../Plonky3/matrix" }
# p3-baby-bear = { path = "../Plonky3/baby-bear" }
# p3-util = { path = "../Plonky3/util" }
# p3-challenger = { path = "../Plonky3/challenger" }
# p3-dft = { path = "../Plonky3/dft" }
# p3-fri = { path = "../Plonky3/fri" }
# p3-goldilocks = { path = "../Plonky3/goldilocks" }
# p3-keccak = { path = "../Plonky3/keccak" }
# p3-keccak-air = { path = "../Plonky3/keccak-air" }
# p3-blake3 = { path = "../Plonky3/blake3" }
# p3-mds = { path = "../Plonky3/mds" }
# p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
# p3-poseidon2 = { path = "../Plonky3/poseidon2" }
# p3-symmetric = { path = "../Plonky3/symmetric" }
# p3-uni-stark = { path = "../Plonky3/uni-stark" }
# p3-maybe-rayon = { path = "../Plonky3/maybe-rayon" }
# p3-bn254-fr = { path = "../Plonky3/bn254-fr" }
