[workspace.package]
version = "1.3.0"
edition = "2021"
rust-version = "1.82"
authors = ["OpenVM Authors"]
homepage = "https://openvm.dev"
repository = "https://github.com/openvm-org/"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "benchmarks/utils",
    "benchmarks/execute",
    "benchmarks/prove",
    "crates/prof",
    "crates/sdk",
    "crates/cli",
    "crates/circuits/mod-builder",
    "crates/circuits/poseidon2-air",
    "crates/circuits/primitives",
    "crates/circuits/primitives/derive",
    "crates/toolchain/transpiler",
    "crates/toolchain/openvm",
    "crates/toolchain/build",
    "crates/toolchain/instructions",
    "crates/toolchain/instructions/derive",
    "crates/toolchain/macros",
    "crates/toolchain/platform",
    "crates/toolchain/tests",
    "crates/continuations",
    "crates/vm",
    "extensions/rv32im/circuit",
    "extensions/rv32im/transpiler",
    "extensions/rv32im/guest",
    "extensions/rv32im/tests",
    "extensions/rv32-adapters",
    "extensions/native/circuit",
    "extensions/native/compiler",
    "extensions/native/compiler/derive",
    "extensions/native/recursion",
    "extensions/native/transpiler",
    "extensions/algebra/circuit",
    "extensions/algebra/transpiler",
    "extensions/algebra/guest",
    "extensions/algebra/moduli-macros",
    "extensions/algebra/complex-macros",
    "extensions/algebra/tests",
    "extensions/bigint/circuit",
    "extensions/bigint/transpiler",
    "extensions/bigint/guest",
    "extensions/keccak256/circuit",
    "extensions/keccak256/transpiler",
    "extensions/keccak256/guest",
    "extensions/sha256/circuit",
    "extensions/sha256/transpiler",
    "extensions/sha256/guest",
    "extensions/ecc/circuit",
    "extensions/ecc/transpiler",
    "extensions/ecc/guest",
    "extensions/ecc/sw-macros",
    "extensions/ecc/tests",
    "extensions/pairing/circuit",
    "extensions/pairing/guest",
    "guest-libs/ff_derive/",
    "guest-libs/k256/",
    "guest-libs/p256/",
    "guest-libs/keccak256/",
    "guest-libs/pairing/",
    "guest-libs/ruint/",
    "guest-libs/sha2/",
    "guest-libs/verify_stark/",
]
exclude = ["crates/sdk/example"]
resolver = "2"

# Fastest runtime configuration
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

# Make sure debug symbols are in the bench profile for flamegraphs
[profile.bench]
inherits = "profiling"

# This will compile slowly
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

# For O1 optimization but still fast(ish) compile times
[profile.fast]
inherits = "dev"
debug-assertions = true
# better recompile times
incremental = true
lto = "thin"

[workspace.dependencies]
# Stark Backend
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.1", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.1", default-features = false }

# OpenVM
openvm-sdk = { path = "crates/sdk", default-features = false }
openvm-mod-circuit-builder = { path = "crates/circuits/mod-builder", default-features = false }
openvm-poseidon2-air = { path = "crates/circuits/poseidon2-air", default-features = false }
openvm-sha256-air = { path = "crates/circuits/sha256-air", default-features = false }
openvm-circuit-primitives = { path = "crates/circuits/primitives", default-features = false }
openvm-circuit-primitives-derive = { path = "crates/circuits/primitives/derive", default-features = false }
openvm = { path = "crates/toolchain/openvm", default-features = false }
openvm-build = { path = "crates/toolchain/build", default-features = false }
openvm-instructions = { path = "crates/toolchain/instructions", default-features = false }
openvm-instructions-derive = { path = "crates/toolchain/instructions/derive", default-features = false }
openvm-macros-common = { path = "crates/toolchain/macros", default-features = false }
openvm-platform = { path = "crates/toolchain/platform", default-features = false }
openvm-transpiler = { path = "crates/toolchain/transpiler", default-features = false }
openvm-toolchain-tests = { path = "crates/toolchain/tests", default-features = false }
openvm-custom-insn = { path = "crates/toolchain/custom_insn", default-features = false }
openvm-circuit = { path = "crates/vm", default-features = false }
openvm-circuit-derive = { path = "crates/vm/derive", default-features = false }
openvm-continuations = { path = "crates/continuations", default-features = false }
cargo-openvm = { path = "crates/cli", default-features = false }

# Extensions
openvm-rv32im-circuit = { path = "extensions/rv32im/circuit", default-features = false }
openvm-rv32im-transpiler = { path = "extensions/rv32im/transpiler", default-features = false }
openvm-rv32im-guest = { path = "extensions/rv32im/guest", default-features = false }
openvm-rv32-adapters = { path = "extensions/rv32-adapters", default-features = false }
openvm-native-circuit = { path = "extensions/native/circuit", default-features = false }
openvm-native-compiler = { path = "extensions/native/compiler", default-features = false }
openvm-native-compiler-derive = { path = "extensions/native/compiler/derive", default-features = false }
openvm-native-recursion = { path = "extensions/native/recursion", default-features = false }
openvm-native-transpiler = { path = "extensions/native/transpiler", default-features = false }
openvm-keccak256-circuit = { path = "extensions/keccak256/circuit", default-features = false }
openvm-keccak256-transpiler = { path = "extensions/keccak256/transpiler", default-features = false }
openvm-keccak256-guest = { path = "extensions/keccak256/guest", default-features = false }
openvm-sha256-circuit = { path = "extensions/sha256/circuit", default-features = false }
openvm-sha256-transpiler = { path = "extensions/sha256/transpiler", default-features = false }
openvm-sha256-guest = { path = "extensions/sha256/guest", default-features = false }
openvm-bigint-circuit = { path = "extensions/bigint/circuit", default-features = false }
openvm-bigint-transpiler = { path = "extensions/bigint/transpiler", default-features = false }
openvm-bigint-guest = { path = "extensions/bigint/guest", default-features = false }
openvm-algebra-circuit = { path = "extensions/algebra/circuit", default-features = false }
openvm-algebra-transpiler = { path = "extensions/algebra/transpiler", default-features = false }
openvm-algebra-guest = { path = "extensions/algebra/guest", default-features = false }
openvm-algebra-moduli-macros = { path = "extensions/algebra/moduli-macros", default-features = false }
openvm-algebra-complex-macros = { path = "extensions/algebra/complex-macros", default-features = false }
openvm-ecc-circuit = { path = "extensions/ecc/circuit", default-features = false }
openvm-ecc-transpiler = { path = "extensions/ecc/transpiler", default-features = false }
openvm-ecc-guest = { path = "extensions/ecc/guest", default-features = false }
openvm-ecc-sw-macros = { path = "extensions/ecc/sw-macros", default-features = false }
openvm-pairing-circuit = { path = "extensions/pairing/circuit", default-features = false }
openvm-pairing-transpiler = { path = "extensions/pairing/transpiler", default-features = false }
openvm-pairing-guest = { path = "extensions/pairing/guest", default-features = false }
openvm-verify-stark = { path = "guest-libs/verify_stark", default-features = false }

# Benchmarking
openvm-benchmarks-utils = { path = "benchmarks/utils", default-features = false }

# Plonky3
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
    "nightly-features",
], rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }

zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", rev = "bb476b9" }
snark-verifier-sdk = { version = "0.2.0", default-features = false, features = [
    "loader_halo2",
    "halo2-axiom",
] }
snark-verifier = { version = "0.2.0", default-features = false }
halo2curves-axiom = "0.7.0"

forge-fmt = "0.2.0"
cargo_metadata = "0.18"
alloy-sol-types = "0.8.25"
tracing = "0.1.40"
bon = "3.2.0"
serde_json = "1.0.117"
serde_with = "3.11.0"
clap = "4.5.23"
toml = "0.8.14"
lazy_static = "1.5.0"
derive-new = "0.6.0"
derive_more = { version = "1.0.0", features = [
    "display",
], default-features = false }
derivative = "2.2.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
backtrace = "0.3.71"
metrics = "0.23.0"
cfg-if = "1.0.0"
test-case = "3.3.1"
test-log = "0.2.16"
enum_dispatch = "0.3.13"
eyre = "0.6.12"
tempfile = "3.13.0"
thiserror = "1.0.65"
rustc-hash = "2.0.0"
static_assertions = "1.1.0"
async-trait = "0.1.83"
getset = "0.1.3"
rrs-lib = "0.1.0"
rand = { version = "0.8.5", default-features = false }
hex = { version = "0.4.3", default-features = false }
serde-big-array = "0.5.1"

# default-features = false for no_std for use in guest programs
itertools = { version = "0.14.0", default-features = false }
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1", default-features = false }
bytemuck = { version = "1.20.0", default-features = false }
once_cell = { version = "1.20", default-features = false }

# cryptography, default-features = false for no_std
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = { version = "0.13.4", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false }
ecdsa-core = { version = "0.16.9", package = "ecdsa", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ff = { version = "0.13.1", default-features = false }
sha2 = { version = "0.10", default-features = false }

# For local development. Add to your `.cargo/config.toml`
# [patch."https://github.com/Plonky3/Plonky3.git"]
# p3-field = { path = "../Plonky3/field" }
# p3-baby-bear = { path = "../Plonky3/baby-bear" }
# p3-dft = { path = "../Plonky3/dft" }
# p3-fri = { path = "../Plonky3/fri" }
# p3-keccak-air = { path = "../Plonky3/keccak-air" }
# p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
# p3-monty-31 = { path = "../Plonky3/monty-31" }
# p3-poseidon2 = { path = "../Plonky3/poseidon2" }
# p3-poseidon2-air = { path = "../Plonky3/poseidon2-air" }
# p3-symmetric = { path = "../Plonky3/symmetric" }
