[package]
name = "axiom-vm"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
afs-compiler = { workspace = true, features = ["sdk"] }
afs-derive = { workspace = true }
afs-recursion = { workspace = true }
ax-sdk = { workspace = true }
p3-baby-bear = { workspace = true }
stark-vm = { workspace = true, features = ["sdk"] }

serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["parallel"]
parallel = ["stark-vm/parallel"]
