[package]
name = "axiom-vm"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axvm-native-compiler = { workspace = true }
axvm-recursion = { workspace = true }
ax-poseidon2-air = { workspace = true }
ax-stark-sdk = { workspace = true }
p3-baby-bear = { workspace = true }
axvm-circuit = { workspace = true }

derivative = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
static_assertions.workspace = true
async-trait.workspace = true

[features]
default = ["parallel"]
parallel = ["axvm-circuit/parallel"]
test-utils = ["axvm-circuit/test-utils"]
