[package]
name = "benchmark"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
csv = "1.3.0"
afs = { path = "../bin/afs", default-features = false }
olap = { path = "../bin/olap", default-features = false }
afs-stark-backend = { path = "../stark-backend", default-features = false }
logical-interface = { path = "../logical-interface" }
afs-test-utils = { path = "../test-utils" }
afs-page = { path = "../db/page", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
rand = "0.8.5"
p3-util = { workspace = true }
p3-uni-stark = { workspace = true }
p3-field = { workspace = true }
p3-blake3 = { workspace = true }
p3-keccak = { workspace = true }
lazy_static = "1.5.0"
tracing = "0.1.40"
hex = "0.4.3"
tracing-subscriber = "0.3.18"
tracing-forest = "0.1.6"
chrono = "0.4.38"
itertools = "0.13.0"
regex = "1.10.5"
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }


[[bench]]
name = "single_rw_trace_gen"
harness = false

[features]
default = ["afs-stark-backend/mimalloc"]
parallel = ["afs/parallel", "olap/parallel"]
