[package]
name = "axvm-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axvm-build.workspace = true
axvm-circuit.workspace = true
ax-circuit-derive.workspace = true
axvm-sdk.workspace = true
ax-stark-backend.workspace = true
ax-stark-sdk.workspace = true
axvm-transpiler.workspace = true

axvm-algebra-circuit.workspace = true
axvm-algebra-transpiler.workspace = true
axvm-ecc-circuit.workspace = true
axvm-ecc-transpiler.workspace = true
axvm-keccak256-circuit.workspace = true
axvm-keccak256-transpiler.workspace = true
axvm-keccak256-guest.workspace = true
axvm-native-circuit.workspace = true
axvm-native-compiler.workspace = true
axvm-native-recursion = { workspace = true, features = ["test-utils"] }
axvm-rv32im-circuit.workspace = true
axvm-rv32im-transpiler.workspace = true

clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tempfile.workspace = true
metrics.workspace = true
tracing.workspace = true
hex.workspace = true
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
rand_chacha = { version = "0.3", default-features = false }
k256 = { workspace = true, features = ["ecdsa"] }
tiny-keccak.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
num-bigint-dig = { workspace = true, features = ["std", "serde"] }
serde.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = [
    "criterion",
    "flamegraph",
    "frame-pointer",
] }

[features]
default = ["parallel", "mimalloc", "bench-metrics"]
bench-metrics = ["axvm-native-recursion/bench-metrics"]
aggregation = []
static-verifier = ["axvm-native-recursion/static-verifier"]
parallel = ["axvm-native-recursion/parallel"]
mimalloc = ["axvm-circuit/mimalloc"]
jemalloc = ["axvm-circuit/jemalloc"]
jemalloc-prof = ["axvm-circuit/jemalloc-prof"]
nightly-features = ["axvm-circuit/nightly-features"]

[[bench]]
name = "fibonacci_execute"
harness = false

[[bin]]
name = "fib_e2e"
