[package]
name = "cargo-axiom"
description = "axVM CLI tools"
readme = "README.md"
version.workspace = true
edition.workspace = true

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "build",
    "git",
    "git2",
] }

[dependencies]
axvm-build = { workspace = true }
axvm-transpiler = { workspace = true }
axvm-circuit = { workspace = true }
axvm-keccak256-circuit = { workspace = true }
ax-stark-sdk.workspace = true
cargo_metadata = "0.18.1"
clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tracing.workspace = true
# reqwest = { version = "0.12.4", features = [
#     "stream",
#     "json",
#     "rustls-tls",
# ], default-features = false }
# futures-util = "0.3.30"
# indicatif = "0.17.8"
# tokio = { version = "1", features = ["full"] }
dirs = "5.0"
serde.workspace = true
rand = "0.8"
# downloader = { version = "0.2", default-features = false, features = [
#     "rustls-tls",
# ] }
serde_json.workspace = true
yansi = "1.0.1"
hex = "0.4.3"
anstyle = "1.0.8"
target-lexicon = "0.12.15"
tempfile = "3.10.1"
rustc-demangle = "0.1.18"
goblin = "0.8"
capstone = "0.11.0"
regex = "1.5.4"
prettytable-rs = "0.10"
textwrap = "0.16.0"
ctrlc = "3.4.2"

[features]
default = ["parallel", "mimalloc"]
parallel = ["axvm-circuit/parallel"]
mimalloc = ["axvm-circuit/mimalloc"]
jemalloc = ["axvm-circuit/jemalloc"]
jemalloc-prof = ["axvm-circuit/jemalloc-prof"]
nightly-features = ["axvm-circuit/nightly-features"]
