[package]
name = "afs-chips"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AFS chip library"

[dependencies]
p3-air = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-util = { workspace = true }

afs-middleware = { path = "../stark-middleware" }
afs-middleware-derive = { path = "../stark-middleware/derive" }

[dev-dependencies]
p3-uni-stark = { workspace = true }
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
