[package]
name = "afs-chips"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AFS chip library"

[dependencies]
p3-air = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-util = { workspace = true }
rand = "0.8"

afs-stark-backend = { path = "../stark-backend" }
afs-derive = { path = "../derive" }
afs-test-utils = { path = "../test-utils" }
parking_lot = "0.12.2"

[dev-dependencies]
p3-uni-stark = { workspace = true }
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
